...

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
...
                    android:layout_marginEnd="16dp"
                    android:fontFamily="sans-serif"
                    android:text="JogjaKost"
                    android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
                    android:textColor="@color/color_secondary"
...

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilRegisNama"
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
...

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilRegisUsername"
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
...

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilRegisEmail"
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
...
                        android:enabled="false"
                        android:hint="Tanggal Lahir"
                        app:layout_constraintEnd_toStartOf="@+id/btnPickDate"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tilRegisEmail"
...

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilRegisNomorTelepon"
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
...

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilRegisPassword"
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
...

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilRegisPasswordConfirm"
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
...

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
...

                <Button
                    android:id="@+id/btnRegister"
                    style="@style/Widget.Material3.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Register" />
            </LinearLayout>

...
